@@ -164,7 +164,63 @@ module FeedTools
     end
     
     # Given a block of html, locates feed links with a given mime type.
-    def extract_autodiscovery_href(html, mime_type)
+    def extract_link_by_mime_type(html, mime_type)
+      require 'feed_tools/vendor/htree'
+      require 'feed_tools/helpers/xml_helper'
+      
+      # This is technically very, very wrong.  But it saves oodles of
+      # clock cycles, and probably works 99.999% of the time.
+      html_document = HTree.parse_xml(
+        FeedTools.tidy_html(html.gsub(/<body>(.|\n)*<\/body>/, ""))).to_rexml
+      html_node = nil
+      head_node = nil
+      link_nodes = []
+      for node in html_document.children
+        next unless node.kind_of?(REXML::Element)
+        if node.name.downcase == "html" &&
+            node.children.size > 0
+          html_node = node
+          break
+        end
+      end
+      return nil if html_node.nil?
+      for node in html_node.children
+        next unless node.kind_of?(REXML::Element)
+        if node.name.downcase == "head"
+          head_node = node
+          break
+        end
+        if node.name.downcase == "link"
+          link_nodes << node
+        end
+      end
+      return nil if html_node.nil? && link_nodes.empty?
+      if !head_node.nil?
+        link_nodes = []
+        for node in head_node.children
+          next unless node.kind_of?(REXML::Element)
+          if node.name.downcase == "link"
+            link_nodes << node
+          end
+        end
+      end
+      find_link_nodes = lambda do |links|
+        for link in links
+          next unless link.kind_of?(REXML::Element)
+          if link.attributes['type'].to_s.strip.downcase ==
+              mime_type.downcase &&
+              link.attributes['rel'].to_s.strip.downcase == "alternate"
+            href = link.attributes['href']
+            return href unless href.blank?
+          end
+        end
+        for link in links
+          next unless link.kind_of?(REXML::Element)
+          find_link_nodes.call(link.children)
+        end
+      end
+      find_link_nodes.call(link_nodes)
+      return nil
     end
   end
 end
